@@ -3,6 +3,7 @@ Changelog
 
 1.13-dev - (unreleased)
 -----------------------
+ * Bug fix: Uncomment comment in assign_version that was providing IVersionEnhanced for specs [tiberich #3650]
 
 1.12 - (2010-10-07)
 -------------------
